Add more statistics into health response
